# schwarz_task

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_data.json
books/: filters.py  models.py
books/api/: urls.py
books/api/v1/: serializers.py  urls.py  views.py
books/api/v1/tests/: test_views.py
books/migrations/: 0001_initial.py
config/: settings.py  urls.py
